--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_API_BASE_URL=https://backend-story-sharing.onrender.com
-VITE_FRONTEND_URL=http://localhost:5173
+VITE_FRONTEND_URL=https://the-web-stories.vercel.app
